--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -10,7 +10,7 @@ ruby:
       .card-header.card-border
         h3.card-title = t('.title', resource: resource.model_name.human)
       .card-body
-        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { id: :edit_profile, method: :put }) do |f|
           = f.error_notification
 
           = f.input :username, required: true, autofocus: true
@@ -29,7 +29,7 @@ ruby:
       .card-header.card-border
         h3.card-title = t('.change_password')
       .card-body
-        = simple_form_for(resource, as: resource_name, url: demo_mode ? root_path : registration_path(resource_name), html: { method: :put }) do |f|
+        = simple_form_for(resource, as: resource_name, url: demo_mode ? root_path : registration_path(resource_name), html: { id: :change_password,  method: :put }) do |f|
           = f.error_notification
 
           = f.input :current_password, input_html: { autocomplete: "password" }
