--- a/app/views/layouts/_messages.html.slim
+++ b/app/views/layouts/_messages.html.slim
@@ -16,3 +16,27 @@
       h4
         i.icon.fas class="fa-#{icon}"
         = content_tag(:span, msg, :id => "flash_#{name}")
+
+.notification [
+    aria-live="polite"
+    aria-atomic="true"
+    style="position: relative; min-height: 200px;"
+    data-controller="notification"
+    data-notification-hidden-value="false"
+  ]
+  .wrapper style="position: absolute; top: 0; right: 0;"
+    .toast[
+        stye="opacity: 1"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+        data-animation="true"
+        data-autohide="false"
+        data-delay="3000"
+      ]
+      .toast-header
+        button.ml-2.mb-1.close[type="button" data-dismiss="toast" aria-label="Close"]
+          span[aria-hidden="true"]
+            | ×
+      .toast-body
+        |  Hello, world! This is a toast message.
